--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,12 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@react-spring/web": "^9.5.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +23,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "react-tinder-card": "^1.6.2",
+    "styled-components": "^5.3.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
