--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
