--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^7.0.0",
     "react-tinder-card": "^1.6.2",
     "styled-components": "^5.3.10",
     "web-vitals": "^1.1.2"
