--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
